fixed block overlapping and hide helper text

--- a/Gutenberg/src/embedpress-pdf/editor.scss
+++ b/Gutenberg/src/embedpress-pdf/editor.scss
@@ -9,6 +9,11 @@
   content:"\ASupported File Type: PDF, DOC, PPT, XLS etc ";
   white-space: pre;
 }
-.wp-block-embedpress-document + * {
+.wp-block-embedpress-embedpress-pdf + *
+{
 	clear: both;
+}
+
+.embedpress-document-editmode .components-placeholder__instructions:after {
+	display: none !important;
 }
