--- a/Gutenberg/src/embedpress-pdf/style.scss
+++ b/Gutenberg/src/embedpress-pdf/style.scss
@@ -28,6 +28,7 @@
 .embedpress-document-editmode .components-form-file-upload {
   display: none !important;
 }
-.wp-block-embedpress-document + * {
+.wp-block-embedpress-embedpress-pdf + *
+{
 	clear: both;
 }
